feat(speaking): add full section session
